--- a/home_fix/user_center/templates/user_center/my_provide_page.html
+++ b/home_fix/user_center/templates/user_center/my_provide_page.html
@@ -1,108 +1,148 @@
 {% extends "basic/layout.html" %}
 {% block title %} My Provide | Homefix{% endblock %}
 {% block body %}
-    <style>
-        .dropbtn {
-            background-color: #04AA6D;
-            color: white;
-            border: none;
-        }
-
-        .dropdown {
-            position: relative;
-            display: inline-block;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f1f1f1;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
-        }
-
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        .dropdown:hover .dropbtn {
-            background-color: #3e8e41;
-        }
-    </style>
+{#    <style>#}
+{#        .dropbtn {#}
+{#            background-color: #04AA6D;#}
+{#            color: white;#}
+{#            border: none;#}
+{#        }#}
+{##}
+{#        .dropdown {#}
+{#            position: relative;#}
+{#            display: inline-block;#}
+{#        }#}
+{##}
+{#        .dropdown-content {#}
+{#            display: none;#}
+{#            position: absolute;#}
+{#            background-color: #f1f1f1;#}
+{#            min-width: 160px;#}
+{#            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);#}
+{#            z-index: 1;#}
+{#        }#}
+{##}
+{#        .dropdown-content a {#}
+{#            color: black;#}
+{#            padding: 12px 16px;#}
+{#            text-decoration: none;#}
+{#            display: block;#}
+{#        }#}
+{##}
+{#        .dropdown-content a:hover {#}
+{#            background-color: #ddd;#}
+{#        }#}
+{##}
+{#        .dropdown:hover .dropdown-content {#}
+{#            display: block;#}
+{#        }#}
+{##}
+{#        .dropdown:hover .dropbtn {#}
+{#            background-color: #3e8e41;#}
+{#        }#}
+{#    </style>#}
     <br><br>
     <center>
         <h1 class="display-5 fw-bold">SERVICES YOU PROVIDE</h1>
     </center>
     <br><br>
 
-    {% for provide in provide_list %}
-        <style>
-            a {
-                text-decoration: none;
-                color: black;
-            }
-        </style>
-
-        <div class="container w-75 border border-success rounded-pill" style="background-color: #eee;">
-            <div class="row">
-                <div class="col-10 text-center">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th scope="col">Service_id</th>
-                            <th scope="col">Create Time</th>
-                            <th scope="col">Request Time</th>
-                            <th scope="col">Requester</th>
-                            <th scope="col">Status</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row">{{ provide.service_id }}</th>
-                            <td>{{ provide.service_time }}</td>
-                            <td>{{ provide.order_time }}</td>
-                            <td>{{ provide.request_user_id }}</td>
-                            <td>{{ provide.status }}</td>
-                            <!-- <td>
-                                <div class="dropdown">
-                                    <button class="dropbtn">Action</button>
-                                    <div class="dropdown-content">
-                                      <a href="#">Accept</a>
-                                      <a href="#">Cancel</a>
-                                      <a href="#">Delete</a>
-                                      <a href="#">Update</a>
-                                    </div>
-                                  </div>
-                            </td> -->
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="col justify-content-center align-self-center text-center">
-                    <div class="dropdown">
-                        <button class="dropbtn btn btn-success">Action</button>
-                        <div class="dropdown-content">
-                            <a href="#">Accept</a>
-                            <a href="#">Cancel</a>
-                            <a href="#">Delete</a>
-                            <a href="#">Update</a>
+    <div class="container">
+        <table class=" table table-hover table-bordered">
+            <thead class="table-light">
+            <tr>
+                <th scope="col">Service_id</th>
+                <th scope="col">Create Time</th>
+                <th scope="col">Request Time</th>
+                <th scope="col">Requester</th>
+                <th scope="col">Status</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for provide in provide_list %}
+                <tr>
+                    <th scope="row">{{ provide.service_id }}</th>
+                    <td>{{ provide.service_time }}</td>
+                    <td>{{ provide.order_time }}</td>
+                    <td>{{ provide.request_user_id }}</td>
+                    <td>{{ provide.status }}</td>
+                    <td>
+                        <div class="col justify-content-center align-self-center text-center">
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                    Action
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <li><a class="dropdown-item" href="#">Accept</a></li>
+                                    <li><a class="dropdown-item" href="#">Decline</a></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br><br>
-    {% endfor %}
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
+    {#    {% for provide in provide_list %}#}
+    {#        <style>#}
+    {#            a {#}
+    {#                text-decoration: none;#}
+    {#                color: black;#}
+    {#            }#}
+    {#        </style>#}
+    {##}
+    {#        <div class="container w-75 border border-success rounded-pill" style="background-color: #eee;">#}
+    {#            <div class="row">#}
+    {#                <div class="col-10 text-center">#}
+    {#                    <table class="table">#}
+    {#                        <thead>#}
+    {#                        <tr>#}
+    {#                            <th scope="col">Service_id</th>#}
+    {#                            <th scope="col">Create Time</th>#}
+    {#                            <th scope="col">Request Time</th>#}
+    {#                            <th scope="col">Requester</th>#}
+    {#                            <th scope="col">Status</th>#}
+    {#                        </tr>#}
+    {#                        </thead>#}
+    {#                        <tbody>#}
+    {#                        <tr>#}
+    {#                            <th scope="row">{{ provide.service_id }}</th>#}
+    {#                            <td>{{ provide.service_time }}</td>#}
+    {#                            <td>{{ provide.order_time }}</td>#}
+    {#                            <td>{{ provide.request_user_id }}</td>#}
+    {#                            <td>{{ provide.status }}</td>#}
+    {#                            <!-- <td>#}
+    {#                                <div class="dropdown">#}
+    {#                                    <button class="dropbtn">Action</button>#}
+    {#                                    <div class="dropdown-content">#}
+    {#                                      <a href="#">Accept</a>#}
+    {#                                      <a href="#">Cancel</a>#}
+    {#                                      <a href="#">Delete</a>#}
+    {#                                      <a href="#">Update</a>#}
+    {#                                    </div>#}
+    {#                                  </div>#}
+    {#                            </td> -->#}
+    {#                        </tr>#}
+    {#                        </tbody>#}
+    {#                    </table>#}
+    {#                </div>#}
+    {#                <div class="col justify-content-center align-self-center text-center">#}
+    {#                    <div class="dropdown">#}
+    {#                        <button class="dropbtn btn btn-success">Action</button>#}
+    {#                        <div class="dropdown-content">#}
+    {#                            <a href="#">Accept</a>#}
+    {#                            <a href="#">Cancel</a>#}
+    {#                            <a href="#">Delete</a>#}
+    {#                            <a href="#">Update</a>#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#        </div>#}
+    {#        <br><br>#}
+    {#    {% endfor %}#}
 {% endblock %}
