Revise page titles

--- a/home_fix/user_center/templates/user_center/my_provide_page.html
+++ b/home_fix/user_center/templates/user_center/my_provide_page.html
@@ -1,5 +1,5 @@
 {% extends "basic/layout.html" %}
-{% block title %} My Provide | Homefix{% endblock %}
+{% block title %} My Services | Homefix{% endblock %}
 {% block body %}
     <br><br>
     <center>
