--- a/home_fix/user_center/templates/user_center/my_request_page.html
+++ b/home_fix/user_center/templates/user_center/my_request_page.html
@@ -1,5 +1,5 @@
 {% extends "basic/layout.html" %}
-{% block title %} My Request | Homefix{% endblock %}
+{% block title %} My Requests | Homefix{% endblock %}
 {% block body %}
 
     <br><br>
