--- a/home_fix/user_center/templates/user_center/profile.html
+++ b/home_fix/user_center/templates/user_center/profile.html
@@ -1,5 +1,5 @@
 {% extends "basic/layout.html" %}
-{% block title %} User Profile | Homefix{% endblock %}
+{% block title %} My Profile | Homefix{% endblock %}
 {% block body %}
 
     <style>
