--- a/home_fix/service/templates/service/offer_services.html
+++ b/home_fix/service/templates/service/offer_services.html
@@ -95,8 +95,9 @@
                     <label class="form-label" for="category">Service Charge</label>
                     <div class="input-group mb-3">
 
-                        <input type="number" id="coins" class="form-control form-input"
-                               placeholder="Enter the no of coins">
+                        <input required type="number" id="coins" class="form-control form-input"
+                               placeholder="Enter the no of coins" min="0" oninput="this.value =
+ !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null">
                     </div>
                 </div>
 
