--- a/home_fix/user_center/templates/user_center/my_provide_page.html
+++ b/home_fix/user_center/templates/user_center/my_provide_page.html
@@ -8,10 +8,10 @@
     <br><br>
 
     <div class="container">
-        <table class=" table table-hover table-bordered">
+        <table class=" table table-hover table-bordered text-center">
             <thead class="table-light">
                 <tr>
-                    <th scope="col">Service_id</th>
+                    <th scope="col">Service_type</th>
                     <th scope="col">Create Time</th>
                     <th scope="col">Request Time</th>
                     <th scope="col">Requester</th>
@@ -23,7 +23,7 @@
             <tbody>
             {% for provide in provide_list %}
                 <tr>
-                    <th scope="row">{{ provide.service_id }}</th>
+                    <th scope="row">{{ provide.service_category }}</th>
                     <td>{{ provide.service_time }}</td>
                     <td>{{ provide.order_time }}</td>
                     <td>{{ provide.request_user_id }}</td>
