--- a/home_fix/service/templates/service/service_detail.html
+++ b/home_fix/service/templates/service/service_detail.html
@@ -104,7 +104,7 @@
                 <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="location.href='{% url 'service:request_service_confirm' services.id%}'">Take
                 </button>
                 <button type="button" class="btn btn-outline-dark btn-lg px-4"
-                        onclick="">Report
+                        onclick="">Report Service
                 </button>
             </div>
         </div>
